# datasystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  datasystem.sln
.github/workflows/: pragma-generic-ci.yml  pragma-linux-ci.yml  pragma-windows-ci.yml
datasystem/: datasystem.vcxproj  datasystem.vcxproj.filters
include/: datasystem.h  datasystem_color.h  datasystem_t.hpp  datasystem_vector.h
src/: datasystem.cpp  datasystem_color.cpp  datasystem_vector.cpp  datasystemdefinitions.hpp  definitions.hpp
src/implementation/: color.cpp  core.cpp  vector.cpp
src/interface/: color.cppm  core.cppm  datasystem.cppm  vector.cppm
